--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
             <input type="button" id="clear" value="Clear" />
             <input type="button" id="conceal-reveal" value="Conceal" />
         </div>
-        <div id="content">
+        <div id="content" style="display:none">
         </div>
     </body>
 </html>
