Add room-specific behaviors

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
             Estimate: <input type="text" id="estimate-input" />
             <input type="button" value="Estimate" id="send" />
         </div>
-        <div id="host">
+        <div id="host" style="display:none">
             <input type="button" id="clear" value="Clear" />
             <input type="button" id="conceal-reveal" value="Conceal" />
         </div>
