--- a/public/index.html
+++ b/public/index.html
@@ -48,11 +48,7 @@
     <body>
         <div id="identity">
             <h1>Join/Create a Session</h1>
-            Room: <select id="room">
-                <option value="room1">Room 1</option>
-                <option value="room2">Room 2</option>
-                <option value="room3">Room 3</option>
-            </select>
+            Room: <input type="text" id="room" />
             Name: <input type="text" id="name" />
             <input type="button" value="Join" id="join" class="btn btn-primary" />
         </div>
