--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Poker Face</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css"></link>
 
@@ -20,7 +22,7 @@
           <h2>Participants</h2>
           <table class="table table-striped table-condensed">
             <thead>
-              <tr><td>Name</td><td>Estimate</td></tr>
+              <tr><th>Name</th><th>Estimate</th></tr>
             </thead>
             <tbody>
               {{#each items}}
@@ -34,7 +36,7 @@
           <h2>Participants</h2>
           <table class="table table-striped table-condensed">
             <thead>
-              <tr><td>Name</td><td>Estimate</td></tr>
+              <tr><th>Name</th><th>Estimate</th></tr>
             </thead>
             <tbody>
               {{#each items}}
