--- a/public/index.html
+++ b/public/index.html
@@ -65,5 +65,7 @@
         </div>
         <div id="content" style="display:none">
         </div>
+          <img src="heartbeat-icon.png" id="heartbeat-icon" style="float: right; position: fixed; top:0px; right: 0px" />
+
     </body>
 </html>
