Updating lobby page to have margins.

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         </script>
 
     </head>
-    <body>
+    <body class="container">
         <div id="identity">
             <h1>Join/Create a Session</h1>
             Room: <input type="text" id="room" />
