Replacing "Let's Estimate" with the room name.

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
             <input type="button" value="Join" id="join" class="btn btn-primary" />
         </div>
         <div id="estimate" style="display:none">
-            <h1>Let's Estimate</h1>
+            <h1 id="room-title">Let's Estimate</h1>
             Your Estimate: <input type="text" id="estimate-input" />
             <input type="button" value="Estimate" id="send" class="btn btn-primary" />
         </div>
